# makalu_sdk

./: CMakeLists.txt
can/bx/: makalu_bxcan.c  makalu_bxcan.h
can/fd/: makalu_fdcan_ids.h
drivers/: at24c02.c  at24c02.h
util/: makalu_crc.c  makalu_crc.h
